name:                app
version:             0.1.0.0
synopsis:            Web polygon
description:         Please see README.md
homepage:            http://github.com/githubuser/app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Model
                       Site
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , Spock
                       , Spock-digestive
                       , text
                       , transformers
                       , blaze-html
                       , digestive-bootstrap
                       , digestive-functors
                       , wai-middleware-static
                       , wai-extra
                       , persistent
                       , persistent-sqlite
                       , persistent-template

                       --, aeson
                       , blaze-bootstrap
                       --, blaze-html
                       --, digestive-bootstrap
                       --, mtl
                       --, Spock-rest
                       --, time
                       , monad-logger
                       , resourcet
                       --, esqueleto
                       --, validate-input
